--- a/app/views/levels/_index_as_partial.html.erb
+++ b/app/views/levels/_index_as_partial.html.erb
@@ -1,5 +1,5 @@
 <%= render 'theme_skin', level: @levels.last %>
-<% up_to = @completed_levels.last ? @completed_levels.last.level_id : 0 %>
+<% up_to = @completed_levels.any? ? @completed_levels.max : 0 %>
 
 <div class="level_selection_page">
   <div class="chapter">
@@ -29,7 +29,7 @@
       <div class="level_start_word"><%= level.start %></div>
 
       <div class="level_btn">
-        <% if @completed_levels[level.id - 1] and @completed_levels[level.id - 1].optimal_achieved %>
+        <% if @optimal_levels.include?(level.id) %>
           <span class="glyphicon glyphicon-flag"></span>
         <% end %>
         <span class="level_id"><%= level.id %></span>
