--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WORD LINK</title>
+    <title>REWORD</title>
     <%= csrf_meta_tags %>
 
     <meta name="apple-mobile-web-app-capable" content="yes">
