renamed to Reword

--- a/app/assets/javascripts/manifest.json.erb
+++ b/app/assets/javascripts/manifest.json.erb
@@ -1,6 +1,6 @@
 {
-  "short_name": "Word Link",
-  "name": "Word Link",
+  "short_name": "Reword",
+  "name": "Reword",
   "icons": [
     {
       "src": "<%= image_path("logo.png") %>",
