--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -698,7 +698,7 @@ html, body {
   }
 }
 
-.credits_content {
+.credits_content, .profile_content {
   font-size: 4vh;
   display: none;
   text-align: center;
