--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -66,7 +66,7 @@ html, body{
   width: 100%;
   transform: translate(-50%, -50%);
   .btn {
-    width: 7vh;
+    width: calc(7vh + 2px);
     line-height: 7vh;
     margin: 0px 1px;
     padding: 0;
@@ -74,7 +74,7 @@ html, body{
     font-size: 5vh;
   }
   .choosable {
-    border: 1px solid var(--main-border-color);
+    border: 2px solid var(--main-border-color);
   }
   .choosable:hover {
     background-color: var(--main-border-color);
@@ -97,6 +97,7 @@ html, body{
   height: 7vh;
   width: 7vh;
   display: inline-block;
+  margin: 0px 1px;
 }
 
 .reorder_btn {
@@ -302,13 +303,10 @@ html, body{
 }
 
 .message_container {
-  position: absolute;
-  top: 0;
-  left: 0;
   display: none;
   width: 100%;
   min-height: 100vh;
-  height: 100%;
+
   text-align: center;
   background-color: var(--main-background-color);
   color: var(--main-background-text-color);
@@ -316,8 +314,9 @@ html, body{
   padding-top: 3vh;
   #well_done {
     font-weight: bold;
-    margin: 10px auto;
+    margin: 0px auto;
     margin-top: 5vh;
+    padding-bottom: 2vh;
     font-size: 3vh;
     span {
       margin: 0 5px;
@@ -330,7 +329,7 @@ html, body{
   }
   #completed_in {
     font-size: 2.8vh;
-    margin-bottom: 3vh;
+    padding-bottom: 3vh;
     display: none;
   }
   .chapter_complete {
@@ -344,14 +343,13 @@ html, body{
   .congrats_message {
     font-weight: bold;
     font-size: 5vh;
-    margin-bottom: 30px;
+    padding-bottom: 30px;
   }
 }
 
 .path_word_container {
   display: none;
   margin-top: 10px;
-  margin-bottom: 10px;
   position: relative;
   .path_word {
     font-weight: bold;
@@ -372,10 +370,13 @@ html, body{
     max-width: 80vw;
     margin: 0px auto;
     margin-top: 10px;
-    margin-bottom: 20px;
     padding-left: 20px;
     padding-right: 20px;
     opacity: 1;
+    p {
+      margin-bottom: 0;
+      padding-bottom: 5px;
+    }
   }
 }
 
@@ -400,7 +401,7 @@ html, body{
     display: block;
     text-decoration: none;
     color: white;
-    margin-bottom: 50px;
+    padding-bottom: 50px;
   }
 }
 
