--- a/app/views/levels/_show_as_partial.html.erb
+++ b/app/views/levels/_show_as_partial.html.erb
@@ -1,4 +1,4 @@
-<span class="hidden" data-level_no=<%= @level.id %> data-hint=<%= get_hint %> ></span>
+<span class="hidden" data-level_no="<%= @level.id %>" data-hint="<%= get_hint %>"></span>
 <%= render 'theme_skin', level: @level %>
 
 <% if @undo %>
