fix limit, replace custom_populat with custom_popular_copy in Level.generate, reduce button size for level 50, fix seeds bug

--- a/app/views/levels/_limit_count.html.erb
+++ b/app/views/levels/_limit_count.html.erb
@@ -5,10 +5,10 @@
 
   <div class="limit_dot glyphicon glyphicon-flag"></div>
 
-  <% (@level.limit - @level.path.length ).times do %>
+  <% (@limit - @level.path.length ).times do %>
     <div class="limit_dot glyphicon glyphicon-triangle-bottom"></div>
   <% end %>
-  
+
 
 </div>
 
