--- a/app/views/levels/_theme_skin.html.erb
+++ b/app/views/levels/_theme_skin.html.erb
@@ -23,18 +23,23 @@
 
 <% if level.id == 50 %>
   .curr_word_letter:not(.complete) {
-    width: 6vh;
-    line-height: 6vh;
+    width: 5.5vh;
+    line-height: 5.5vh;
     font-size: 4.5vh;
   }
   .curr_word_letter_container {
-    width: 6vh;
-    height: 6vh;
+    width: 5.5vh;
+    height: 5.5vh;
   }
   .curr_word .complete {
     font-size: 7vh;
     width: 7vh;
     height: 7vh;
+  }
+  .reorder_btn {
+    left: calc(5.5vh + 5px);
+    font-size: 4.5vh;
+    height: 5.5vh;
   }
 <% end %>
 
