--- a/app/views/levels/_limit_count.html.erb
+++ b/app/views/levels/_limit_count.html.erb
@@ -5,8 +5,8 @@
 
   <div class="limit_dot glyphicon glyphicon-flag"></div>
 
-  <% (@limit - @level.path.length ).times do %>
-    <div class="limit_dot glyphicon glyphicon-triangle-bottom"></div>
+  <% (@limit - @level.path.length).times do %>
+    <div class="limit_dot glyphicon">．</div>
   <% end %>
 
 
