--- a/app/views/levels/home.html.erb
+++ b/app/views/levels/home.html.erb
@@ -1,47 +1,1 @@
-<div class="starting_page">
-  <div class="game_title_cont">
-    <div class="game_title">REWORD</div>
-    <span class="overlay_letter">A</span>
-  </div>
-
-  <div class="play_btn">
-    <%= link_to "PLAY", levels_path, remote: true, id: "play_link" %><br>
-    <%= link_to "Zen mode", level_path('zen'), remote: true, id: "play_link" %><br>
-    <span class="options">options</span>
-  </div>
-  
-
-  <div class="options_overlay">
-    <%= render 'options_container' %>
-    <span class="back_btn">back</span>
-  </div>
-
-</div>
-
-<script>
-// On page load
-(function() {
-  // Check if iOS
-  if(!(/iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream)){ return false; }
-
-  // Check if already in webapp
-  if(window.navigator.standalone == true){ return false; }
-
-  // Check if you already asked them to add to homescreen
-  if(document.cookie.search("alreadAsked") >= 0){ return false; }
-
-  // Ask user to add to homescreen
-  alert("add this app to your homescreen by clicking 'add to homescreen at the top right corner");
-  document.getElementById("hiddenPrompt").style.display = 'inherit';
-})();
-
-// After clicking a button to dismiss prompt
-function hidePromptInFuture(){
-  // Do not show prompt again
-  document.cookie = "alreadAsked=true; expires=Thu, 18 Dec 2099 12:00:00 UTC";
-}
-</script>
-
-<script>
-  $('.game_title').lettering();
-</script>
+<%= render 'home_as_partial' %>
