--- a/app/views/levels/_reset_button.html.erb
+++ b/app/views/levels/_reset_button.html.erb
@@ -3,15 +3,6 @@
     <span class="glyphicon glyphicon-refresh"></span>
   <% end %>
 
-  <%# move to bottom right corner, maybe %>
-  <div>
-    <% if @level.id == 9999 %>
-      <%= link_to skip_zen_level_level_path('zen'), remote: true do %>
-        <span class="glyphicon glyphicon-remove"></span>
-      <% end %>
-    <% end %>
-  </div>
-
   <div class="options_btn" data-toggle='modal' data-target="#options_overlay">
     <span class="glyphicon glyphicon-th-large"></span>
   </div>
@@ -29,10 +20,17 @@
             Music
             <%= render 'music_btn' %>
           </div>
-          <div><%=link_to "Select Level", levels_path(chapter: (@level.id / 10) + 1), remote: true, class:  "select_level_btn" %></div>
+
+          <% if @level.id != 9999  %>
+            <div><%=link_to "Select Level", levels_path(chapter: (@level.id / 10) + 1), remote: true, class:  "select_level_btn" %></div>
+          <% else %>
+            <div><%=link_to "Back to Menu", root_path, remote: true, class:  "select_level_btn" %></div>
+            <div><%= link_to "Skip level?", skip_zen_level_level_path('zen'), remote: true, class:  "skip_level_btn" %></div>
+          <% end %>
         </div>
 
       </div>
     </div>
   </div>
 </div>
+
